@@ -15,5 +15,8 @@ my $base = iolib::connect();
 my $job = iolib::get_job($base,$jobid) or die "Failed to get job information\n";
 ((defined $job->{'job_user'}) and (defined $job->{'launching_directory'})) or die "Some of the job information are missing\n";
 #system "sudo -u ".$job->{'user'}." tar xvfz $stageoutfile -C ".$job->{'launchingDirectory'}." && rm -v $stageoutfile" and die "Stageout delivery failed: $!\n";
-system "sudo -u ".$job->{'job_user'}." tar xfz $stageoutfile -C ".$job->{'launching_directory'}.">& /dev/null && rm $stageoutfile" and die "Stageout delivery failed: $!\n";
+#system "sudo -u ".$job->{'job_user'}." tar xfz $stageoutfile -C ".$job->{'launching_directory'}.">& /dev/null && rm $stageoutfile" and die "Stageout delivery failed: $!\n";
+$ENV{OARDO_BECOME_USER} = $job->{job_user};
+system "oardodo id > /tmp/log.oar 2>&1";
+system "oardodo tar xfz $stageoutfile -C $job->{'launching_directory'} >& /dev/null && rm $stageoutfile" and die "Stageout delivery failed: $!\n";
 iolib::disconnect($base);
