@@ -15,6 +15,8 @@ version 2.3.2:
   - Debug temporary job UID feature
   - Add 'kill -9' on subprocesses that reached a timeout (avoid Perl to
     wait something)
+  - desktop computing feature is now available again. (ex: oarsub -t
+    desktop_computing date)
 
 version 2.3.1:
 --------------
